Changelog for Shellcuts

v1.2.1 - 03/03/2018
  - Added support for spaces in path names
  - Fixed issue with Fish printing some things weirdly
  - New message when attempting to list shellcuts before any have been made
  - Fixed bug when detecting shells in init script
  - Cleaned up usage text
  - Reminded users to restart their terminal after initialization
  - Removed option to list script contents from initialization (because it's bytecode)
  - Now allows user to shortcut initialization at the beginning

v1.2.0 - 02/28/2018
  - Completely revitalized initialization script
  - Now supports Zsh and Fish as well as Bash
  - New automatic configuration for Bash, Zsh, and Fish
  - Now available as rpm package
  - New help menu
  - Bashmarks syntax now disabled by default, can be enabled with flag
  - Fixed issues with version printing weirdly
  - Init command now works
  - Switched to printf over echo for stability

v1.1.2 - 01/28/2018
  - Removed PyPI support
  - Added deb support and deb packaging tools
  - Improved initialization experience
  - Changed user shellcut save dir to .config/shellcuts
  - Create .bashrc if one does not exist
  - Added version and help commands
  - Added initialization command

v1.1.1 - 01/08/2018
  - Added Man page
  - Created separate PyPI page

v1.1.0 - 01/03/2018
  - Renamed to Shellcuts for universality
  - Revamped readme
  - First release to PyPI
  - Added Bashmarks-like aliases 
  - Rewrote init script in Python
  
v1.0.0 - 12/17/2017
  - Initial release
  - Core functionality (add, delete, list, jump) in place
  - Supports Bash
  - Preliminary documentation complete